--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(schort)
 
 add_executable(schort
         src/main.cpp
+        src/tokenaries/token_type.hpp
+        src/tokenaries/tokenizer.cpp
+        src/tokenaries/tokenizer.hpp
+        src/tokenaries/token.hpp
+        src/tokenaries/token.cpp
 )
